@@ -1,4 +1,5 @@
 Revision history for DBIx::Class
+        - ithreads compat added, fork compat improved
         - weaken result_source in all resultsets
 
 0.05999_03 2006-03-14 01:58:10
